--- a/exam-backend/src/main/resources/application.yml
+++ b/exam-backend/src/main/resources/application.yml
@@ -9,13 +9,18 @@ logging:
   level:
     root: info
 
-
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 111111
     url: jdbc:mysql://localhost:3308/exam?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+  devtools:
+    restart:
+      enabled: true
+      additional-paths: src/main/java
+      exclude: static
+
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
