refactor(components): Extract components

--- a/exam-frontend/jsconfig.json
+++ b/exam-frontend/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "lib": ["ES2015"]
   },
   "exclude": ["node_modules", "dist"]
 }
