--- a/exam-frontend/package.json
+++ b/exam-frontend/package.json
@@ -11,12 +11,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.10",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -29,6 +31,7 @@
     "sass": "^1.69.5",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.0.5"
+    "vite": "^5.0.5",
+    "vite-plugin-vue-setup-extend": "^0.4.0"
   }
 }
